@@ -15,6 +15,7 @@
 * Changed the default assumption to handle only post types that are 'public' by default. Others are not handled by default.
 * Updated the Options to show all available post types.
 * Improved performance by limiting our posts_where, wp_count_posts and other filters in Groups_Post_Access to handled post types only.
+* Fixed a potential fatal error when the user_register hook is fired and get_current_screen() is not defined.
 
 = 2.1.2 =
 * Fixed a warning that came up when the post type in a query is provided as an array indicating multiple post types.
